<resources>
    <string name="app_name">Belardo &amp; Parrondo</string>
    <string name="application_name">Big Diseno</string>
    <string name="lblNombre">Nombre y Apellido</string>
    <string name="lblEmail">E-mail</string>
    <string name="lblTelefono">Teléfono</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="contentDescription">contentDescription</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="servicios">ALQUILERES | VENTAS | TASACIONES</string>
    <string name="seleccionProfesional">SELECCIONE PROFESIONAL</string>
    <string name="seleccionFecha">SELECCIONE FECHA</string>
    <string name="seleccionTurno">SELECCIONE DIA</string>
    <string name="correo">
        <![CDATA[
            Un correo será enviado a su casilla de<br>
            E-mail *******@***.com para la<br>
            confirmación de tu Visita
        ]]>
    </string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="calendarioVisitas">CALENDARIO DE VISITAS</string>
    <string name="btnCancelar">Cancelar</string>
    <dimen name="margin_top">50dip</dimen>

    <string name="columna1_Visitas">Fecha</string>
    <string name="columna2_Visitas">Hora</string>
    <string name="columna3_Visitas">Profesional</string>
    <string name="columna4_Visitas">Estado</string>

    <string name="msjCancelacion">¿Esta seguro que desea cancelar este turno?</string>
    <string name="btnAceptarCancelacion">Aceptar</string>
    <string name="btnCancelarCancelacion">Cancelar</string>
</resources>
